kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: drayma/tweddit-frontend:latest
          imagePullPolicy: Always  
          ports:
            - containerPort: 4173   # Port the container exposes (matching service)
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4173         # Port accessible within the cluster
      targetPort: 80   # The container's exposed port
      nodePort: 30002    # Port to expose outside the cluster
  type: NodePort
