kube/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-api-gateway
  labels:
    app: springboot-api-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: drayma/tweddit-api-gateway:latest 
        ports:
        - containerPort: 8085 # Updated to use port 8085
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /actuator/health # Replace with your health endpoint
            port: 8085 # Updated to use port 8085
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /actuator/health # Replace with your readiness endpoint
            port: 8085 # Updated to use port 8085
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8085 # Updated to use port 8085
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx" # Assuming you use NGINX Ingress Controller
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.yourdomain.com # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-api-gateway
            port:
              number: 80
